<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mocha.yusuf.jetpack3.UI.TV.DetailTV">
    <include layout="@layout/app_bar"/>

    <ScrollView
        android:layout_marginTop="@dimen/activity_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tv_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tv_the_walking_dead"
                android:contentDescription="@string/content" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_marginStart="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_dummy"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toTopOf="@+id/tv_image" />

            <TextView
                android:id="@+id/tv_first_air_date_text"
                android:layout_marginStart="20dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_air_date"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_first_air_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/first_air_date_dummy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_first_air_date_text"
                app:layout_constraintTop_toTopOf="@+id/tv_first_air_date_text" />

            <TextView
                android:id="@+id/tv_score_text"
                android:layout_marginStart="20dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_air_date" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/score_dummy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_score_text"
                app:layout_constraintTop_toTopOf="@+id/tv_score_text" />

            <ImageView
                android:id="@+id/tv_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_favorite_border_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_score_text" />

            <TextView
                android:id="@+id/tv_overview_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_image" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/overview_dummy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_overview_text"
                app:layout_constraintTop_toTopOf="@+id/tv_overview_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
