<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/movie" />

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/tv" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite" />
</menu>
